// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abi should generate ABI correctly 1`] = `
A {
  "abi": {
    "errors": {
      "10": {
        "message": "Dictionary error",
      },
      "128": {
        "message": "Null reference exception",
      },
      "129": {
        "message": "Invalid serialization prefix",
      },
      "13": {
        "message": "Out of gas error",
      },
      "130": {
        "message": "Invalid incoming message",
      },
      "131": {
        "message": "Constraints error",
      },
      "132": {
        "message": "Access denied",
      },
      "133": {
        "message": "Contract stopped",
      },
      "134": {
        "message": "Invalid argument",
      },
      "135": {
        "message": "Code of a contract was not found",
      },
      "136": {
        "message": "Invalid address",
      },
      "137": {
        "message": "Masterchain support is not enabled for this contract",
      },
      "2": {
        "message": "Stack underflow",
      },
      "3": {
        "message": "Stack overflow",
      },
      "3040": {
        "message": "1 is equal to 2",
      },
      "32": {
        "message": "Method ID not found",
      },
      "34": {
        "message": "Action is invalid or not supported",
      },
      "37": {
        "message": "Not enough TON",
      },
      "38": {
        "message": "Not enough extra-currencies",
      },
      "4": {
        "message": "Integer overflow",
      },
      "5": {
        "message": "Integer out of expected range",
      },
      "6": {
        "message": "Invalid opcode",
      },
      "7": {
        "message": "Type check error",
      },
      "8": {
        "message": "Cell overflow",
      },
      "9": {
        "message": "Cell underflow",
      },
    },
    "getters": [
      {
        "arguments": [],
        "name": "test",
        "returnType": {
          "kind": "simple",
          "optional": false,
          "type": "S2",
        },
      },
    ],
    "receivers": [
      {
        "message": {
          "kind": "empty",
        },
        "receiver": "internal",
      },
    ],
    "types": [
      {
        "fields": [
          {
            "name": "y",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S2",
      },
      {
        "fields": [
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "StateInit",
      },
      {
        "fields": [
          {
            "name": "bounced",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "sender",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "raw",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "slice",
            },
          },
        ],
        "header": null,
        "name": "Context",
      },
      {
        "fields": [
          {
            "name": "bounce",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "to",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "mode",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "body",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "SendParameters",
      },
    ],
  },
  "address": kQD3ZZXOOK_Hlbt67oGT__g2na3YSQualpat_dgWPdsmnUfl,
  "init": {
    "code": x{FF00F4A413F4BCF2C80B}
 x{62_}
  x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
   x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
    x{6D}
   x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
  x{5}
   x{B9B06DB3CDB3C31}
    x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
     x{6D}
    x{807B}
   x{B82BEED44D0D20001},
    "data": x{4_}
 x{C_}
  x{A0B1CB_}
   x{FF00F4A413F4BCF2C80B}
    x{62_}
     x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
      x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
       x{6D}
      x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
     x{5}
      x{B9B06DB3CDB3C31}
       x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
        x{6D}
       x{807B}
      x{B82BEED44D0D20001},
  },
}
`;

exports[`abi should generate ABI correctly 2`] = `
B {
  "abi": {
    "errors": {
      "10": {
        "message": "Dictionary error",
      },
      "128": {
        "message": "Null reference exception",
      },
      "129": {
        "message": "Invalid serialization prefix",
      },
      "13": {
        "message": "Out of gas error",
      },
      "130": {
        "message": "Invalid incoming message",
      },
      "131": {
        "message": "Constraints error",
      },
      "132": {
        "message": "Access denied",
      },
      "133": {
        "message": "Contract stopped",
      },
      "134": {
        "message": "Invalid argument",
      },
      "135": {
        "message": "Code of a contract was not found",
      },
      "136": {
        "message": "Invalid address",
      },
      "137": {
        "message": "Masterchain support is not enabled for this contract",
      },
      "2": {
        "message": "Stack underflow",
      },
      "3": {
        "message": "Stack overflow",
      },
      "32": {
        "message": "Method ID not found",
      },
      "34": {
        "message": "Action is invalid or not supported",
      },
      "34789": {
        "message": "1 is not equal to 1",
      },
      "37": {
        "message": "Not enough TON",
      },
      "38": {
        "message": "Not enough extra-currencies",
      },
      "4": {
        "message": "Integer overflow",
      },
      "5": {
        "message": "Integer out of expected range",
      },
      "6": {
        "message": "Invalid opcode",
      },
      "7": {
        "message": "Type check error",
      },
      "8": {
        "message": "Cell overflow",
      },
      "9": {
        "message": "Cell underflow",
      },
    },
    "getters": [
      {
        "arguments": [],
        "name": "test1",
        "returnType": {
          "kind": "simple",
          "optional": false,
          "type": "address",
        },
      },
      {
        "arguments": [],
        "name": "test2",
        "returnType": {
          "kind": "simple",
          "optional": false,
          "type": "S",
        },
      },
    ],
    "receivers": [
      {
        "message": {
          "kind": "empty",
        },
        "receiver": "internal",
      },
    ],
    "types": [
      {
        "fields": [
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "StateInit",
      },
      {
        "fields": [
          {
            "name": "y",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S2",
      },
      {
        "fields": [
          {
            "name": "bounced",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "sender",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "raw",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "slice",
            },
          },
        ],
        "header": null,
        "name": "Context",
      },
      {
        "fields": [
          {
            "name": "bounce",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "to",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "mode",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "body",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "SendParameters",
      },
      {
        "fields": [
          {
            "name": "x",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S",
      },
    ],
  },
  "address": kQDu2bvwiGl7mXkhql9S6C3kPIY3uUM97_IZ1TBBDTMKHsWy,
  "init": {
    "code": x{FF00F4A413F4BCF2C80B}
 x{62_}
  x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
   x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
    x{6D}
   x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
  x{2_}
   x{4}
    x{B6541B679B67863_}
     x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
      x{6D}
     x{F843DB3C7059C87001CB017301CB017001CB0012CCCCC9F900C87201CB017001CB0012CA07CBFFC9D020D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088}
      x{D0F404306D018158E5018010F40F6FA1F2E087018158E522028010F417C801C8F400C901CC7001CA006D30C9}
    x{B4587B679B67863_}
     x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
      x{6D}
     x{807B}
   x{BE15F76A268690000C_},
    "data": x{4_}
 x{C_}
  x{66_}
   x{B71CB_}
    x{FF00F4A413F4BCF2C80B}
     x{62_}
      x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
       x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
        x{6D}
       x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
      x{5}
       x{B9B06DB3CDB3C31}
        x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
         x{6D}
        x{807B}
       x{B82BEED44D0D20001}
   x{B510D_}
    x{FF00F4A413F4BCF2C80B}
     x{62_}
      x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
       x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
        x{6D}
       x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
      x{2_}
       x{4}
        x{B6541B679B67863_}
         x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
          x{6D}
         x{F843DB3C7059C87001CB017301CB017001CB0012CCCCC9F900C87201CB017001CB0012CA07CBFFC9D020D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088}
          x{D0F404306D018158E5018010F40F6FA1F2E087018158E522028010F417C801C8F400C901CC7001CA006D30C9}
        x{B4587B679B67863_}
         x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
          x{6D}
         x{807B}
       x{BE15F76A268690000C_},
  },
}
`;

exports[`abi should generate ABI correctly 3`] = `
C {
  "abi": {
    "errors": {
      "10": {
        "message": "Dictionary error",
      },
      "128": {
        "message": "Null reference exception",
      },
      "129": {
        "message": "Invalid serialization prefix",
      },
      "13": {
        "message": "Out of gas error",
      },
      "130": {
        "message": "Invalid incoming message",
      },
      "131": {
        "message": "Constraints error",
      },
      "132": {
        "message": "Access denied",
      },
      "133": {
        "message": "Contract stopped",
      },
      "134": {
        "message": "Invalid argument",
      },
      "135": {
        "message": "Code of a contract was not found",
      },
      "136": {
        "message": "Invalid address",
      },
      "137": {
        "message": "Masterchain support is not enabled for this contract",
      },
      "2": {
        "message": "Stack underflow",
      },
      "3": {
        "message": "Stack overflow",
      },
      "3040": {
        "message": "1 is equal to 2",
      },
      "32": {
        "message": "Method ID not found",
      },
      "34": {
        "message": "Action is invalid or not supported",
      },
      "34789": {
        "message": "1 is not equal to 1",
      },
      "37": {
        "message": "Not enough TON",
      },
      "38": {
        "message": "Not enough extra-currencies",
      },
      "4": {
        "message": "Integer overflow",
      },
      "5": {
        "message": "Integer out of expected range",
      },
      "6": {
        "message": "Invalid opcode",
      },
      "7": {
        "message": "Type check error",
      },
      "8": {
        "message": "Cell overflow",
      },
      "9": {
        "message": "Cell underflow",
      },
    },
    "getters": [
      {
        "arguments": [],
        "name": "test",
        "returnType": {
          "kind": "simple",
          "optional": false,
          "type": "S",
        },
      },
    ],
    "receivers": [],
    "types": [
      {
        "fields": [
          {
            "name": "x",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S",
      },
      {
        "fields": [
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "StateInit",
      },
      {
        "fields": [
          {
            "name": "bounced",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "sender",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "raw",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "slice",
            },
          },
        ],
        "header": null,
        "name": "Context",
      },
      {
        "fields": [
          {
            "name": "bounce",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "to",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "mode",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "body",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "SendParameters",
      },
    ],
  },
  "address": kQBQGgF6Na3G6E6F6zD0e_-hp2NqddiNlV0P7KyKu67TdkSL,
  "init": {
    "code": x{FF00F4A413F4BCF2C80B}
 x{62_}
  x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E082C8F84301CC7F01CA000101810101CF00C9ED54}
   x{ED44D0D401F863D2000197810101D7000131E030F828D70B0A8309BAF2E089DB3C}
    x{807B}
   x{0192307FE020D74931C21F3070}
  x{5}
   x{B9B06DB3CDB3C31}
    x{ED44D0D401F863D2000197810101D7000131E030F828D70B0A8309BAF2E089DB3C}
     x{807B}
    x{20}
   x{B82BEED44D0D20001},
    "data": x{4_}
 x{C_}
  x{A0F14F_}
   x{FF00F4A413F4BCF2C80B}
    x{62_}
     x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E082C8F84301CC7F01CA000101810101CF00C9ED54}
      x{ED44D0D401F863D2000197810101D7000131E030F828D70B0A8309BAF2E089DB3C}
       x{807B}
      x{0192307FE020D74931C21F3070}
     x{5}
      x{B9B06DB3CDB3C31}
       x{ED44D0D401F863D2000197810101D7000131E030F828D70B0A8309BAF2E089DB3C}
        x{807B}
       x{20}
      x{B82BEED44D0D20001},
  },
}
`;

exports[`abi should generate ABI correctly 4`] = `
D {
  "abi": {
    "errors": {
      "10": {
        "message": "Dictionary error",
      },
      "128": {
        "message": "Null reference exception",
      },
      "129": {
        "message": "Invalid serialization prefix",
      },
      "13": {
        "message": "Out of gas error",
      },
      "130": {
        "message": "Invalid incoming message",
      },
      "131": {
        "message": "Constraints error",
      },
      "132": {
        "message": "Access denied",
      },
      "133": {
        "message": "Contract stopped",
      },
      "134": {
        "message": "Invalid argument",
      },
      "135": {
        "message": "Code of a contract was not found",
      },
      "136": {
        "message": "Invalid address",
      },
      "137": {
        "message": "Masterchain support is not enabled for this contract",
      },
      "2": {
        "message": "Stack underflow",
      },
      "3": {
        "message": "Stack overflow",
      },
      "32": {
        "message": "Method ID not found",
      },
      "34": {
        "message": "Action is invalid or not supported",
      },
      "37": {
        "message": "Not enough TON",
      },
      "38": {
        "message": "Not enough extra-currencies",
      },
      "4": {
        "message": "Integer overflow",
      },
      "5": {
        "message": "Integer out of expected range",
      },
      "6": {
        "message": "Invalid opcode",
      },
      "7": {
        "message": "Type check error",
      },
      "8": {
        "message": "Cell overflow",
      },
      "9": {
        "message": "Cell underflow",
      },
    },
    "getters": [
      {
        "arguments": [],
        "name": "test",
        "returnType": {
          "format": 257,
          "kind": "simple",
          "optional": false,
          "type": "int",
        },
      },
    ],
    "receivers": [
      {
        "message": {
          "kind": "empty",
        },
        "receiver": "internal",
      },
    ],
    "types": [
      {
        "fields": [
          {
            "name": "z",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S3",
      },
      {
        "fields": [
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "StateInit",
      },
      {
        "fields": [
          {
            "name": "bounced",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "sender",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "raw",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "slice",
            },
          },
        ],
        "header": null,
        "name": "Context",
      },
      {
        "fields": [
          {
            "name": "bounce",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "to",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "mode",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "body",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "SendParameters",
      },
    ],
  },
  "address": kQDgaAt9TXRQnO95QEaZhyh5qroWzh6WSaeQkXxaC-FakCeR,
  "init": {
    "code": x{FF00F4A413F4BCF2C80B}
 x{62_}
  x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
   x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
    x{6D}
   x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
  x{5}
   x{B9B06DB3CDB3C31}
    x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
     x{6D}
    x{DB3C}
     x{807B}
   x{B82BEED44D0D20001},
    "data": x{4_}
 x{C_}
  x{A01081_}
   x{FF00F4A413F4BCF2C80B}
    x{62_}
     x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
      x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
       x{6D}
      x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
     x{5}
      x{B9B06DB3CDB3C31}
       x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
        x{6D}
       x{DB3C}
        x{807B}
      x{B82BEED44D0D20001},
  },
}
`;

exports[`abi should generate ABI correctly 5`] = `
E {
  "abi": {
    "errors": {
      "10": {
        "message": "Dictionary error",
      },
      "128": {
        "message": "Null reference exception",
      },
      "129": {
        "message": "Invalid serialization prefix",
      },
      "13": {
        "message": "Out of gas error",
      },
      "130": {
        "message": "Invalid incoming message",
      },
      "131": {
        "message": "Constraints error",
      },
      "132": {
        "message": "Access denied",
      },
      "133": {
        "message": "Contract stopped",
      },
      "134": {
        "message": "Invalid argument",
      },
      "135": {
        "message": "Code of a contract was not found",
      },
      "136": {
        "message": "Invalid address",
      },
      "137": {
        "message": "Masterchain support is not enabled for this contract",
      },
      "2": {
        "message": "Stack underflow",
      },
      "3": {
        "message": "Stack overflow",
      },
      "32": {
        "message": "Method ID not found",
      },
      "34": {
        "message": "Action is invalid or not supported",
      },
      "37": {
        "message": "Not enough TON",
      },
      "38": {
        "message": "Not enough extra-currencies",
      },
      "4": {
        "message": "Integer overflow",
      },
      "5": {
        "message": "Integer out of expected range",
      },
      "6": {
        "message": "Invalid opcode",
      },
      "7": {
        "message": "Type check error",
      },
      "8": {
        "message": "Cell overflow",
      },
      "9": {
        "message": "Cell underflow",
      },
    },
    "getters": [
      {
        "arguments": [
          {
            "name": "s",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "S4",
            },
          },
        ],
        "name": "test",
        "returnType": {
          "format": 257,
          "kind": "simple",
          "optional": false,
          "type": "int",
        },
      },
    ],
    "receivers": [
      {
        "message": {
          "kind": "empty",
        },
        "receiver": "internal",
      },
    ],
    "types": [
      {
        "fields": [
          {
            "name": "a",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "s",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "S",
            },
          },
        ],
        "header": null,
        "name": "S4",
      },
      {
        "fields": [
          {
            "name": "x",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S",
      },
      {
        "fields": [
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "StateInit",
      },
      {
        "fields": [
          {
            "name": "bounced",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "sender",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "raw",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "slice",
            },
          },
        ],
        "header": null,
        "name": "Context",
      },
      {
        "fields": [
          {
            "name": "bounce",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "to",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "mode",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "body",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "SendParameters",
      },
    ],
  },
  "address": kQAgDY3ULrGmExqTYljHgYXlLKqJIKgJTGxM08MnIhLcqCCZ,
  "init": {
    "code": x{FF00F4A413F4BCF2C80B}
 x{62_}
  x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
   x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
    x{6D}
   x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
  x{5}
   x{B9B066F226F21DB3C59DB3C31}
    x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
     x{6D}
    x{30}
   x{B82BEED44D0D20001},
    "data": x{4_}
 x{C_}
  x{A030C3_}
   x{FF00F4A413F4BCF2C80B}
    x{62_}
     x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
      x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
       x{6D}
      x{0192307FE07021D749C21F953020D70B1FDEC00001D749C121B0917FE070}
     x{5}
      x{B9B066F226F21DB3C59DB3C31}
       x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
        x{6D}
       x{30}
      x{B82BEED44D0D20001},
  },
}
`;

exports[`abi should generate ABI correctly 6`] = `
F {
  "abi": {
    "errors": {
      "10": {
        "message": "Dictionary error",
      },
      "128": {
        "message": "Null reference exception",
      },
      "129": {
        "message": "Invalid serialization prefix",
      },
      "13": {
        "message": "Out of gas error",
      },
      "130": {
        "message": "Invalid incoming message",
      },
      "131": {
        "message": "Constraints error",
      },
      "132": {
        "message": "Access denied",
      },
      "133": {
        "message": "Contract stopped",
      },
      "134": {
        "message": "Invalid argument",
      },
      "135": {
        "message": "Code of a contract was not found",
      },
      "136": {
        "message": "Invalid address",
      },
      "137": {
        "message": "Masterchain support is not enabled for this contract",
      },
      "2": {
        "message": "Stack underflow",
      },
      "3": {
        "message": "Stack overflow",
      },
      "32": {
        "message": "Method ID not found",
      },
      "34": {
        "message": "Action is invalid or not supported",
      },
      "37": {
        "message": "Not enough TON",
      },
      "38": {
        "message": "Not enough extra-currencies",
      },
      "4": {
        "message": "Integer overflow",
      },
      "5": {
        "message": "Integer out of expected range",
      },
      "6": {
        "message": "Invalid opcode",
      },
      "7": {
        "message": "Type check error",
      },
      "8": {
        "message": "Cell overflow",
      },
      "9": {
        "message": "Cell underflow",
      },
    },
    "getters": [],
    "receivers": [
      {
        "message": {
          "kind": "empty",
        },
        "receiver": "internal",
      },
      {
        "message": {
          "kind": "typed",
          "type": "M1",
        },
        "receiver": "internal",
      },
    ],
    "types": [
      {
        "fields": [
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "StateInit",
      },
      {
        "fields": [
          {
            "name": "bounced",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "sender",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "raw",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "slice",
            },
          },
        ],
        "header": null,
        "name": "Context",
      },
      {
        "fields": [
          {
            "name": "bounce",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "bool",
            },
          },
          {
            "name": "to",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "address",
            },
          },
          {
            "name": "value",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "mode",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "body",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "code",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
          {
            "name": "data",
            "type": {
              "kind": "simple",
              "optional": true,
              "type": "cell",
            },
          },
        ],
        "header": null,
        "name": "SendParameters",
      },
      {
        "fields": [
          {
            "name": "a",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "s",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "S4",
            },
          },
        ],
        "header": 1517472568,
        "name": "M1",
      },
      {
        "fields": [
          {
            "name": "a",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
          {
            "name": "s",
            "type": {
              "kind": "simple",
              "optional": false,
              "type": "S",
            },
          },
        ],
        "header": null,
        "name": "S4",
      },
      {
        "fields": [
          {
            "name": "x",
            "type": {
              "format": 257,
              "kind": "simple",
              "optional": false,
              "type": "int",
            },
          },
        ],
        "header": null,
        "name": "S",
      },
    ],
  },
  "address": kQBlyyVCpXsVQWejlBbskF5dyV3zhFHWvfRf9On-VRSoK8Fw,
  "init": {
    "code": x{FF00F4A413F4BCF2C80B}
 x{62_}
  x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
   x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
    x{6D}
   x{0192307FE07021D749C21F953020D70B1FDE20C00022D749C121B0925B7FE082105A72CB38BA8E25D31F0182105A72CB38BAF2E081810101D700810101D700810101D700011210236C135F037FE03070}
  x{A1857DDA89A1A40003_},
    "data": x{4_}
 x{C_}
  x{A05005_}
   x{FF00F4A413F4BCF2C80B}
    x{62_}
     x{D001D0D3030171B0A301FA400120D74981010BBAF2E08820D70B0A208104FFBAF2D0898309BAF2E088545053036F04F86102F862DB3C59DB3CF2E08230C8F84301CC7F01CA00C9ED54}
      x{ED44D0D401F863D20030916DE0F828D70B0A8309BAF2E089DB3C}
       x{6D}
      x{0192307FE07021D749C21F953020D70B1FDE20C00022D749C121B0925B7FE082105A72CB38BA8E25D31F0182105A72CB38BAF2E081810101D700810101D700810101D700011210236C135F037FE03070}
     x{A1857DDA89A1A40003_},
  },
}
`;
